# oxc

./: Cargo.toml
.cargo/: config.toml
crates/oxc_allocator/: Cargo.toml
crates/oxc_ast/: Cargo.toml
crates/oxc_cli/: Cargo.toml
crates/oxc_cli/examples/queries/unicorn/prefer-prototype-methods/: array-directly.yml  array-reflect.yml
crates/oxc_cli/examples/queries/unicorn/prefer-set-size/: direct.yml  indirect.yml
crates/oxc_cli/examples/queries/unicorn/require-array-join-separator/: array_dot_join_dot_call.yml
crates/oxc_cli/src/: lib.rs  plugin.rs
crates/oxc_cli/src/lint/: isolated_handler.rs  module_tree_handler.rs
crates/oxc_linter/: Cargo.toml
crates/oxc_linter/examples/: plugin.rs
crates/oxc_linter/examples/queries/next_no-css-tags/: the_rule.yml
crates/oxc_linter/src/: context.rs  lib.rs  plugin.rs  rules.rs  tester.rs
crates/oxc_minifier/src/compressor/: conditions.rs  mod.rs
crates/oxc_minifier/tests/closure/: minimize_conditions.rs  mod.rs
crates/oxc_query/src/: tests.rs
crates/oxc_semantic2/src/: mangler.rs
crates/oxc_wasm/src/: lib.rs
editor/vscode/server/: Cargo.toml
editor/vscode/server/src/: linter.rs  main.rs
tasks/coverage/: minifier_babel.snap  minifier_test262.snap
tasks/minsize/: minsize.snap
