[package]
name                   = "oxc_cli"
version                = "0.1.0"
publish                = false
authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
categories.workspace   = true

[[bin]]
name = "oxlint"
path = "src/lint/main.rs"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = { workspace = true }

[dependencies]
oxc_allocator      = { workspace = true }
oxc_diagnostics    = { workspace = true }
oxc_index          = { workspace = true }
oxc_linter         = { workspace = true }
oxc_parser         = { workspace = true }
oxc_span           = { workspace = true }
oxc_type_synthesis = { workspace = true }
oxc_query          = { workspace = true }
oxc_semantic       = { workspace = true }

# TODO temp, for type check output, replace with Miette
codespan-reporting = "0.11.1"

ignore         = { workspace = true, features = ["simd-accel"] }
miette         = { workspace = true, features = ["fancy-no-backtrace"] }
rayon          = { workspace = true }
bpaf           = { workspace = true, features = ["derive", "autocomplete", "bright-color"] }
serde          = { workspace = true, features = ["derive"] }
mini-v8        = { path = "/home/u9g/code/8-18-23/mini-v8" }
trustfall      = { workspace = true }
serde_yaml     = "0.9.22"
located_yaml   = "0.2.1"
path-calculate = "0.1.3"

[dev-dependencies]
insta-cmd = { workspace = true }
